Revert "Changed frontend Dockerfile"
This reverts commit c4f4731bc050f5063ed5f5f1218d186ae71a0f1c.

--- a/Dockerfile/Frontend/Dockerfile
+++ b/Dockerfile/Frontend/Dockerfile
@@ -1,11 +1,10 @@
-FROM nginx:alpine
+FROM node:18-alpine as base
 
-WORKDIR /usr/share/nginx/html
+WORKDIR /app
+COPY . .
 
-RUN rm -rf ./*
+RUN npm install -g serve
 
-COPY ./ .
-
-# Exponer el puerto 80 para servir la aplicación Angular
 EXPOSE 80
-CMD sh -c 'nginx -g "daemon off;"'
+
+CMD ["serve", "-s", "build", "-l", "80"]
