Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -209,59 +209,59 @@ stages:
             repository: $(acrLoginServer)/$(backImageName)
             tags: 'latest'
 
-# # -------------------------------------------------------------------------------
-# # |                        BUILD AND PUSH FRONT                                 |
-# # -------------------------------------------------------------------------------
-#     - job: docker_build_and_push_front
-#       displayName: 'Build and Push Front Docker Image to ACR'
-#       pool:
-#        vmImage: 'ubuntu-latest'
-#       steps:
-#         - checkout: self
-#         - task: DownloadPipelineArtifact@2
-#           displayName: 'Download Front artifacts'
-#           inputs:
-#             buildType: 'current'
-#             artifactName: $(frontDrop)
-#             targetPath: '$(Pipeline.Workspace)/$(frontDrop)'
+# -------------------------------------------------------------------------------
+# |                        BUILD AND PUSH FRONT                                 |
+# -------------------------------------------------------------------------------
+    - job: docker_build_and_push_front
+      displayName: 'Build and Push Front Docker Image to ACR'
+      pool:
+       vmImage: 'ubuntu-latest'
+      steps:
+        - checkout: self
+        - task: DownloadPipelineArtifact@2
+          displayName: 'Download Front artifacts'
+          inputs:
+            buildType: 'current'
+            artifactName: $(frontDrop)
+            targetPath: '$(Pipeline.Workspace)/$(frontDrop)'
 
-#         - task: ExtractFiles@1
-#           displayName: 'Unzip Front artifacts'
-#           inputs:
-#             archiveFilePatterns: '$(Pipeline.Workspace)/$(frontDrop)/*.zip'
-#             destinationFolder: '$(Pipeline.Workspace)/React-APP'
+        - task: ExtractFiles@1
+          displayName: 'Unzip Front artifacts'
+          inputs:
+            archiveFilePatterns: '$(Pipeline.Workspace)/$(frontDrop)/*.zip'
+            destinationFolder: '$(Pipeline.Workspace)/React-APP'
 
-#         - task: DownloadPipelineArtifact@2
-#           displayName: 'Download Front Dockerfile'
-#           inputs:
-#             buildType: 'current'
-#             artifactName: 'dockerfile-front'
-#             targetPath: '$(Pipeline.Workspace)/dockerfile-front'
+        - task: DownloadPipelineArtifact@2
+          displayName: 'Download Front Dockerfile'
+          inputs:
+            buildType: 'current'
+            artifactName: 'dockerfile-front'
+            targetPath: '$(Pipeline.Workspace)/dockerfile-front'
 
-#         - task: AzureCLI@2
-#           displayName: 'Log in to Azure Container Registry (ACR)'
-#           inputs:
-#             azureSubscription: '$(ConnectedServiceName)'
-#             scriptType: bash
-#             scriptLocation: inlineScript
-#             inlineScript: |
-#              az acr login --name $(acrLoginServer)
+        - task: AzureCLI@2
+          displayName: 'Log in to Azure Container Registry (ACR)'
+          inputs:
+            azureSubscription: '$(ConnectedServiceName)'
+            scriptType: bash
+            scriptLocation: inlineScript
+            inlineScript: |
+             az acr login --name $(acrLoginServer)
 
-#         - task: Docker@2
-#           displayName: 'Build Front Docker image'
-#           inputs:
-#             command: build
-#             repository: $(acrLoginServer)/$(frontImageName)
-#             dockerfile: $(Pipeline.Workspace)/dockerfile-front/Dockerfile
-#             buildContext: '$(Pipeline.Workspace)/React-APP'
-#             tags: '$(frontImageTag)'
+        - task: Docker@2
+          displayName: 'Build Front Docker image'
+          inputs:
+            command: build
+            repository: $(acrLoginServer)/$(frontImageName)
+            dockerfile: $(Pipeline.Workspace)/dockerfile-front/Dockerfile
+            buildContext: '$(Pipeline.Workspace)/React-APP/dist'
+            tags: '$(frontImageTag)'
 
-#         - task: Docker@2
-#           displayName: 'Upload API Docker image to ACR'
-#           inputs:
-#             command: push
-#             repository: $(acrLoginServer)/$(frontImageName)
-#             tags: 'latest'
+        - task: Docker@2
+          displayName: 'Upload API Docker image to ACR'
+          inputs:
+            command: push
+            repository: $(acrLoginServer)/$(frontImageName)
+            tags: 'latest'
 
 # -------------------------------------------------------------------------------
 # |     STAGE DEPLOY FRONTEND AND BACKEND TO AZURE APP SERVICES QA              |
@@ -337,21 +337,3 @@ stages:
 #                --container-registry-url https://$(acrLoginServer) \
 #                --container-registry-user $(acrName) \
 #                --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
-#
-    - job: DeployFrontToWebAppQA
-      displayName: 'Deploy Frontend to Web App (QA)'
-      steps:
-        - task: DownloadPipelineArtifact@2
-          displayName: 'Download Front artifacts'
-          inputs:
-            buildType: 'current'
-            artifactName: $(frontDrop)
-            targetPath: '$(Pipeline.Workspace)/$(frontDrop)'
-        
-        - task: AzureRmWebAppDeployment@4
-          inputs:
-            ConnectionType: 'AzureRM'
-            azureSubscription: 'Azure subscription 1 (f7ecd1b3-7c3e-4cb1-9653-fc24ede1711b)'
-            appType: 'webApp'
-            WebAppName: 'frontend-windows-qa'
-            packageForLinux: '$(Pipeline.Workspace)/$(frontDrop)/**/*.zip'
